@@ -1,5 +1,7 @@
 Revision history for Perl extension AnyEvent.
 
+	- fix AnyEvent::Strict error messages for child watchers.
+
 4.351 Sat Apr 11 07:56:14 CEST 2009
         - actually make the signal pipe work under win32.
         - localise $! in signal handler to avoid changing $!, although
